Fixing comments